--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,9 @@
 <%= form_with(model: task) do |f| %>
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
-
+  
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status, class: 'form-control' %>
+        
   <%= f.submit '投稿' %>
 <% end %>
