--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,11 @@
 <h1>タスク一覧</h1>
 
 <ul>
-  <% @task.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.content %></li>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.id, task %> : <%= task.content %> : <%= task.status %></li>
+    
   <% end %>
 </ul>
+
 
 <%= link_to '新規タスクの投稿', new_task_path %>
