--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,27 @@
-<%= form_with(model: task) do |f| %>
+<div class="row">
+  <div class="col-6">
+    <%= form_with(model: task) do |f| %>
+            <% if task.errors.any? %>
+        <div id="error_explanation" class="alert alert-warning">
+          <ul>
+            <% task.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+  <div class="mb-3">
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
+  </div>
   
+  <div class="mb-3">
   <%= f.label :status, 'ステータス' %>
   <%= f.text_field :status, class: 'form-control' %>
-        
+  </div>
+  
   <%= f.submit '投稿' %>
 <% end %>
+  </div>
+</div>
